--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,26 +17,41 @@
 		margin-right: 50px;
 	}
 
-	.table {
+	.listContent {
 		grid-column: 2/3;
+		display: flex;
+		flex-direction: column;
 
-		.buttons {
-		box-sizing: border-box;
-		float: left;
-		margin-bottom: 10px;
-		width: 50%;
+		.topElements {
+			width: 100%;
+			height: 40px;
+			margin-bottom: 10px;
 
-			button {
-				margin-left: 10px;
+			.buttons {
+				box-sizing: border-box;
+				float: left;
+				margin-bottom: 10px;
+				width: 50%;
+	
+				button {
+					margin-left: 10px;
+				}
+			}
+	
+			.searchBox {
+				box-sizing: border-box;
+				float: left;
+				width: 50%;
 			}
 		}
 
-		.searchBox {
-			box-sizing: border-box;
-			float: left;
-			width: 50%;
+		.titleNoCars {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 80vh;
 		}
-  	}
+	}
 }
 
 
@@ -98,9 +113,29 @@
 .navPagination {
 	display: flex;
 
+	.page-item {
+		cursor: pointer;
+	}
+
 	.custom-select {
+		cursor: pointer;
 		width: auto;
 		margin-left: 40px;
+	}
+
+	button {
+		box-shadow: none;
+	}
+}
+
+.filter-list {
+	li {
+		cursor: pointer;
+	}
+
+	.li-inactive:hover {
+		background-color: #dee2e6;
+		border-color: #dee2e6;
 	}
 }
 
@@ -134,4 +169,12 @@
 			width: 50%;
 		}
   	}
+}
+
+.contentBrandsList {
+	padding: 20px;
+
+	.contentTop {
+		margin-bottom: 20px;
+	}
 }
