Added loading icon

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,13 @@
 	}
 }
 
+.loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 90vh;
+}
+
 
 .carsListContent {
 	padding: 20px;
