--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,13 @@
   margin: 10px;
 }
 
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
 .carsListContent {
   padding: 20px;
   display: grid;
