--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,42 @@
 .homeContent .buttons .btn {
   margin: 10px;
 }
+.homeContent .sessionButtons {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+}
+.homeContent .sessionButtons .btn-light {
+  border-color: white;
+  background-color: white;
+  margin-right: 10px;
+}
+.homeContent .sessionButtons .btn-light:hover {
+  background-color: #e2e6ea;
+  border-color: #dae0e5;
+}
+.homeContent .sessionButtons .btn-light:active {
+  background-color: #dae0e5;
+  border-color: #d3d9df;
+}
+.homeContent .aboutButton {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+.homeContent .aboutButton .btn-light {
+  border-color: white;
+  background-color: white;
+  margin-right: 10px;
+}
+.homeContent .aboutButton .btn-light:hover {
+  background-color: #e2e6ea;
+  border-color: #dae0e5;
+}
+.homeContent .aboutButton .btn-light:active {
+  background-color: #dae0e5;
+  border-color: #d3d9df;
+}
 
 .loading {
   display: flex;
@@ -162,6 +198,24 @@
 }
 .contentBrandsList .contentTop {
   margin-bottom: 20px;
+}
+
+.aboutContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+.aboutContent .title {
+  text-align: center;
+}
+.aboutContent .img {
+  margin-top: 50px;
+}
+.aboutContent .img img {
+  width: 250px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
