--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,50 @@
 			margin: 10px;
 		}
 	}
+
+	.sessionButtons {
+		position: fixed;
+		top: 10px;
+		right: 10px;
+
+		.btn-light {
+			border-color: white;
+			background-color: white;
+			margin-right: 10px;
+		}
+
+		.btn-light:hover {
+			background-color: #e2e6ea;
+			border-color: #dae0e5;
+		}
+
+		.btn-light:active {
+			background-color: #dae0e5;
+    		border-color: #d3d9df;
+		}
+	}
+
+	.aboutButton {
+		position: fixed;
+		bottom: 10px;
+		right: 10px;
+
+		.btn-light {
+			border-color: white;
+			background-color: white;
+			margin-right: 10px;
+		}
+
+		.btn-light:hover {
+			background-color: #e2e6ea;
+			border-color: #dae0e5;
+		}
+
+		.btn-light:active {
+			background-color: #dae0e5;
+    		border-color: #d3d9df;
+		}
+	}
 }
 
 .loading {
@@ -194,5 +238,26 @@
 
 	.contentTop {
 		margin-bottom: 20px;
+	}
+}
+
+
+.aboutContent {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 100vh;
+
+	.title {
+		text-align: center;
+	}
+
+	.img {
+		margin-top: 50px;
+		img {
+			width: 250px;
+			cursor: pointer;
+		}
 	}
 }
